Fix horizontal scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ img {
   max-width: 100%;
 }
 
-body {
+html, body {
   overflow-x: hidden;
 }
 
